Add test endpoint
